Fix contrast

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -89,7 +89,7 @@
   --menu-bg-hover: var(--neutral-95);
   --menu-fg-hover: var(--primary-50);
   --menu-bg-active: var(--neutral-95);
-  --menu-fg-active: var(--primary-60);
+  --menu-fg-active: var(--primary-50);
   --menu-ripple-bg: var(--neutral-90);
 
   /* button */
